--- a/mystyles.css
+++ b/mystyles.css
@@ -1,4 +1,7 @@
-body {
+
+body{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
     background-image: url("http://s3.amazonaws.com/digitaltrends-uploads-prod/2016/03/Wind-turbines.jpg");
-    background-color: #cccccc;
 }
