--- a/mystyles.css
+++ b/mystyles.css
@@ -6,4 +6,16 @@ head {
 	text-align: center;
 	font-size: 4em;
 }
+.sidenav {
+		height: 100%; /* 100% Full-height */
+	    width: 5%; /* 0 width - change this with JavaScript */
+	    position: fixed; /* Stay in place */
+	    z-index: 1; /* Stay on top */
+	    top: 0;
+	    left: 0;
+	    background-color: #605d5d; /* Black*/
+	    overflow-x: hidden; /* Disable horizontal scroll */
+	    padding-top: 60px; /* Place content 60px from the top */
+	    transition: 0.5s; /* */
+}
 
