--- a/mystyles.css
+++ b/mystyles.css
@@ -1,6 +1,7 @@
 body {
     background-color: #f2f2f2;
 	font-size: 1em;
+	margin-left: 10%;
 }
 head {
 	text-align: center;
@@ -8,7 +9,7 @@ head {
 }
 .sidenav {
 		height: 100%; /* 100% Full-height */
-	    width: 5%; /* 0 width - change this with JavaScript */
+	    width: 8%; /* 0 width - change this with JavaScript */
 	    position: fixed; /* Stay in place */
 	    z-index: 1; /* Stay on top */
 	    top: 0;
@@ -17,5 +18,13 @@ head {
 	    overflow-x: hidden; /* Disable horizontal scroll */
 	    padding-top: 60px; /* Place content 60px from the top */
 	    transition: 0.5s; /* */
+}
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s
 }
 
