--- a/mystyles.css
+++ b/mystyles.css
@@ -1,7 +1,8 @@
 body {
     background-color: #f2f2f2;
 	font-size: 1em;
-	padding-left: 10%;
+	padding-left: 14%;
+	z-index: 3;
 }
 head {
 	text-align: center;
@@ -9,22 +10,36 @@ head {
 }
 .sidenav {
 		height: 100%; /* 100% Full-height */
-	    width: 8%; /* 0 width - change this with JavaScript */
+	    width: 12%; /* 0 width - change this with JavaScript */
 	    position: fixed; /* Stay in place */
 	    z-index: 1; /* Stay on top */
 	    top: 0;
 	    left: 0;
+		margin-right:0;
 	    background-color: #605d5d; /* Black*/
 	    overflow-x: hidden; /* Disable horizontal scroll */
-	    padding-top: 60px; /* Place content 60px from the top */
+	    padding-top: 50px; /* Place content 60px from the top */
 	    transition: 0.5s; /* */
 }
 .sidenav a {
-    padding: 8px 8px 8px 32px;
+    padding: 8px 8px 8px 8px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 1.5em;
     color: #818181;
     display: block;
     transition: 0.3s
+}
+
+.topbar {
+	height: 5%;
+	width: 100%;
+	z-index:500;
+	padding-left:0;
+	right:0;
+
+	top: 10;
+	background-color: #efb945;
+	margin-left:0;
+	
 }
 
